3.0.0 TODO
- db navigator movements (wait for jQuery UI 1.5)
- default width for fields?

2.99.9
- a bug with P4A_Field::getAsRadio() was solved (labels can be clicked now)
- P4A_Rmdir_Recursive() global function was added
- P4A_Data_Field::setSequence() method does not add the "_seq" postfix anymore
- P4A_DB::nextSequenceId() method adds the "_seq" postfix depending on the db you're using
- SQL dump for PostgreSQL was added to products_catalogue sample
- products_catalogue' SQL dump for MySQL was renamed to db_dump_mysql.sql
- P4A_Quote_SQL_Value() global function was removed
- P4A_DB::quote() method was added (it's a wrapper for Zend_DB quote method)
- P4A_DB::get*(), fetch*(), query*() methods now support the binding params array
- P4A_ROOT_PATH autodetection rules were changed a bit for Windows server compatibility
- P4A_Strip_Double_Backslashes() global function was added
- P4A_UPLOADS_DIR autodetection rules were changed a bit for Windows server compatibility

2.99.8
- some minor changes were done after strict validation checks
- products_catalogue sample now has a "date" field to play with
- a bug with empty values in P4A_Tables (passed to formatters) was solved
- P4A_I18N::format() and normalize() methods now returns an empty string if
  no value is passed
- P4A_Validate_NotEmpty::isValid() method now correctly handles the "0" string
  (which is a Zend Framework bug but we create a workaround for it)
- P4A_I18N::translate() methods returns an empty string if nothing is passed
- minor documentation updates were done on P4A_DB_Source
- Zend Framework was updated to 1.5.1
- P4A_Field::getAsMulticheckbox() and getAsRadio() methods now use 
  P4A_Generate_Widget_Layout_Table() global function to render labels and inputs
- P4A_Field::getAsDate()'s input is now "readonly"
- a bug with P4A_I18N::format() method managing dates was solved
  (forcing format to YYYY-MM-dd)

2.99.7
- a bug with disabled P4A_Field::getAsCheckbox() was solved