@@ -679,13 +679,13 @@ class P4A_Field extends P4A_Widget
 		$enabled = $this->isEnabled();
 		$disabled = $enabled ? "": " disabled='disabled' ";
 
-		$header = "<input id='{$id}input' type='text' class='p4a_date_calendar' readonly='readonly' $disabled";
+		$header = "<input id='{$id}input' type='text' readonly='readonly' $disabled";
 		$close_header = "/>";
 
 		if (!P4A::singleton()->isHandheld()) {
 			$value = $this->data_field->getNewValue();
 			if ($enabled) $close_header .= "<input type='hidden' value='$value' name='p4a_{$id}' id='p4a_{$id}' onchange=\"p4a_calendar_select('p4a_{$id}', '{$id}input')\" />";
-			$close_header .= "<input type='button' value='...' id='{$id}button' $disabled onclick=\"return p4a_calendar_open('p4a_{$id}');\" />";
+			$close_header .= "<input type='button' value='...' id='{$id}button' $disabled onclick=\"return p4a_calendar_open('p4a_{$id}');\" class=\"p4a_field_date_trigger\" />";
 		}
 
 		return $this->composeLabel() . $header . $this->composeStringProperties() . $this->composeStringValue() . $this->composeStringActions() . $close_header;
